@@ -71,6 +71,11 @@ Release date: TBA
 
   Closes #5670
 
+* The issue template for crashes is now created for crashes which were previously not covered
+  by this mechanism.
+
+  Closes #5668
+
 * Rewrote checker for ``non-ascii-name``.
    It now ensures __all__ Python names are ASCII and also properly
    checks the names of imports (``non-ascii-module-import``) as
